breakpoint adjustment to fix broken styles

--- a/backend/drupal/themes/fepper_sub/_styles/bld/style-sub.css
+++ b/backend/drupal/themes/fepper_sub/_styles/bld/style-sub.css
@@ -117,7 +117,7 @@
     text-align: right;
   }
 }
-@media all and (max-width: 767px) {
+@media all and (max-width: 480px) {
   [id^="block-"][id$="-views-block-content-recent-block-3"] h2,
   .view-id-content_recent.view-display-id-page_1 h2 {
     text-align: center;
